public/css/master.css
/* ... */
@media screen and (max-width: 900px){	
	#portfolio-nav{
		top: 10px;
		padding: 0;
		margin-left: auto;
		margin-right: auto;
		left: 0;
		right: 0;
		width: 100%;
	}

	.right-nav-block{
		text-align: center;
	}
}

@media screen and (max-width: 1100px){
	#portfolio-nav{
		width: 75%;
	}
}

/*#portfolio-nav.faded{
	opacity: 1;
}*/

.portfolio-nav-item{
	display: inline-block;
	text-transform: uppercase;
	margin: 0;
	color: #999;
	display: inline-block;
	*display:inline;
	zoom: 1;
	vertical-align:top;
}

.portfolio-nav-item:hover{
	cursor: pointer;
	color: #669933;
}

.portfolio-nav-item.active{
	color: white;
}

/* Services Page styles */

#services-nav > ol{
	margin: 0;
	padding: 0 0 0 25px;
}

.services-nav-item{
	text-transform: uppercase;
	color: #999;
}

.services-nav-item.active{
	color: white;
}

.services-nav-item:hover{
	cursor: pointer;
}


.services-list{
	list-style: number;
	padding: 0 0 0 20px;
}

.services-item{
	margin-bottom: 10px;
	color: #999;
}

.services-item.active{
	color: white;
	font-size: 110%;
}


.services-item:last-child{
	margin-bottom: 0;
}

/* Team Page styles */

#team-bios-wrapper{
	padding-left: 50px;
}

.team-wrapper{
	height: 100%;
	width: 100%;
}

#team-table-wrapper{
	display: table;
}

.team-image{
	width: 50%;
	height: 50%;
	display: inline-block;
}


#team-bios-upper, #team-bios-lower{
	width: 100%;
	height: 50%;
	display: table-row;
}

#team-bios-upper .team-bio{
	padding-bottom: 20px;	
}

#team-bios-lower .team-bio{
	padding-top: 20px;	
}

.team-bio{
	width: 50%;
	display: table-cell;
	vertical-align: top;
	overflow: hidden;
	margin-right: 6%;
}

.team-green-line{
	width: 80%;
	height: 1px;
	position:absolute;
	background: #669933;
}

.team-thumb{
	float: left;
	width: 85px;
	height: 85px;
	margin: 0 12px 12px 0;
}

.team-bio .name{
	text-transform: uppercase;
	padding: 10px 0 0 0;
}

.team-bio .name, .team-bio .title, .team-bio .location{
	margin: 0 0 6px 0;
}

.team-bio .quote{
	padding: 0 20px 20px 0;
}

.team-bio .lower-content{
	clear: both;
}

/* Blog Page styles */

#blog-nav-menu{
	margin: 0;
	list-style-type: none;
	padding: 0;
}

.blog-nav-item{
	color: #999;
	text-transform: uppercase;
}

.blog-nav-item.active{
	color: white;
}

.blog-nav-item:hover{
	cursor: pointer;
}

#blog-posts{
}

.blog-post.active{
	display:block;
}

.blog-post{
	display: none;
}

/* Contact page styles */

.contact-block{
	margin: 10px 0;
}

.contact-block:first-child{
	margin: 0 0 10px 0;
}

#contact-content-wrapper, #stupid-second-content-wrapper{
	width: 100%;
	height: 100%;
}

/* Footer styles */

#footer{
	position: fixed;
	width: 100%;
	bottom: 0;
	height: 65px;
	padding: 20px 65px;
	/*background: black;*/
	font-size: .8em;
	max-width: 1600px;
	/*box-shadow: 0 0 30px black;*/
}

#footer a{
	color: white;
}

#footer a:hover{
	color: #669933;
	text-decoration: none;
}

